--- a/src/sass/block/single-product-certificate.scss
+++ b/src/sass/block/single-product-certificate.scss
@@ -1,186 +1,104 @@
-.single-product {
-  .certificate-product {
-    margin-top: 60px;
-  }
-  .certificate-product-swiper-button-prev, .certificate-product-swiper-button-next, .slider-two-next, .slider-two-prev{
-    z-index: 1000;
-  }
-
-  .certificate-product-slider-small::-webkit-scrollbar {
-    width: 0;
-  }
-
-  .certificate-product .row {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-
-  .certificate-product-container {
+.certificate-product-certificate {
+  margin-top: 50px;
+  .certificate-product-certificate-container {
     width: 100%;
     max-width: 1414px;
     margin: 0 auto;
   }
 
-  .col-sm-4 {
-    -ms-flex: 0 0 33.333333%;
-    flex: 0 0 33.333333%;
-    max-width: 33.333333%;
-  }
-
-  .slider-two .col-sm-4 {
-    flex: none;
-  }
-
-  .sms {
+  .certificate-product-certificate-small {
+    height: 220px;
+    background: #F2F2F2;
+    width: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
+
+    .certificate-product-certificate-swiper-2-button-prev, .certificate-product-certificate-swiper-2-button-next {
+      width: 85px;
+      display: flex;
+      justify-content: center;
+
+      &:hover {
+        cursor: pointer;
+
+        svg path {
+          stroke-opacity: 1 !important;
+        }
+      }
+    }
+
+    .certificate-product-certificate-swiper-2 {
+      cursor: pointer;
+
+      .certificate-product-certificate-swiper-wrapper-2 {
+        .swiper-slide {
+          width: 170px !important;
+          height: 170px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+        }
+
+        .swiper-slide-thumb-active {
+          border: 1px solid #1E3D76;
+        }
+      }
+    }
   }
 
-  .sms-btn {
-    width: 30%;
-    cursor: pointer;
-  }
+  .certificate-product-certificate-big {
+    height: 667px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 
-  .sms-img-active, .pro-img-active {
-    display: block;
-  }
+    .certificate-product-certificate-swiper-button-prev, .certificate-product-certificate-swiper-button-next {
+      width: 85px;
+      display: flex;
+      justify-content: center;
 
+      &:hover {
+        cursor: pointer;
+
+        svg path {
+          stroke: #212529 !important;
+          stroke-opacity: .3;
+        }
+      }
+    }
+
+    .certificate-product-certificate-swiper {
+      cursor: pointer;
+      height: 100%;
+
+      .certificate-product-certificate-swiper-wrapper {
+        .swiper-slide {
+          width: 100% !important;
+          height: 100%;
+          display: flex;
+          justify-content: center;
+          picture{
+            display: contents;
+          }
+          img{
+            height: 100%;
+          }
+        }
+      }
+    }
+  }
   .sms-download {
     background: #f2f2f2;
     color: #656565;
     margin: 43px auto;
     padding: 10px 40px;
     display: block;
-  }
-
-  .sms-list {
-    padding: 25px;
-    width: 100%;
-    background: #f2f2f2;
-    display: flex;
-    margin: 0 auto;
-  }
-
-  .sms-i-active, .pro-i-active {
-    border: 1px solid #1e3d76;
-  }
-
-  .sms-i {
-    width: 170px;
-    line-height: 170px;
-    height: 170px;
-    margin-right: -27px;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .sms-i img {
-    width: 100px;
-  }
-
-  .sms-i picture {
-    display: contents;
-  }
-
-  .sms-list {
-    justify-content: space-between !important;
-  }
-
-  .sms-img {
-    display: none;
-  }
-
-  .sms-img-active {
-    display: block !important;
-  }
-
-  .certificate-product-slider-small {
-    display: flex;
-    width: 100%;
-    max-width: 1250px;
-  }
-
-  .slider-two {
-    flex-wrap: nowrap !important;
-  }
-
-  .sms-i {
-    margin: 0 7px;
-  }
-
-  @media screen and (max-width: 1444px) {
-    .certificate-product-container {
-      padding: 0 15px;
-    }
-    .sms-i {
-      width: 130px;
-      height: 160px;
-      margin: 0 7px;
-    }
-    .certificate-product-slider-small {
-      justify-content: space-between;
-    }
-    .sms-img-active {
-      width: 100%;
-    }
-  }
-
-  @media screen and (max-width: 1330px) {
-    .certificate-product .row {
-      flex-wrap: nowrap;
-    }
-
-  }
-
-  @media screen and (max-width: 970px) {
-    .certificate-product-slider-small {
-      overflow: scroll;
-    }
-    .slider-two-prev {
-      margin-right: 5px;
-    }
-    .slider-two-next {
-      margin-left: 5px;
-    }
-    .sms-i {
-      width: 102px;
-      height: 144px;
-    }
-  }
-
-  @media screen and (max-width: 900px) {
-    .slider-one svg {
-      width: 51px !important;
-    }
-  }
-
-  @media screen and (max-width: 700px) {
-    .certificate-product {
-      margin-top: 20px;
-    }
-  }
-
-  @media screen and (max-width: 570px) {
-
-    .slider-two {
-      .sms-list {
-        padding: 15px;
-      }
-    }
-    .slider-one {
-      flex-direction: column;
-      align-items: center;
-
-      .col-sm-4 {
-        max-width: none;
-      }
-    }
-    .sms-img-active {
-      width: 100%;
+    width: max-content;
+    &:hover{
+      text-decoration: none;
+      color: #0056b3;
     }
   }
 }
