--- a/src/sass/block/rashodniki.scss
+++ b/src/sass/block/rashodniki.scss
@@ -1,6 +1,73 @@
 
-  .rashodniki-container {
-    width: 100%;
-    max-width: 1414px;
-    margin: 50px auto 50px;
+.rashodniki-container {
+  width: 100%;
+  max-width: 1414px;
+  padding: 0 15px;
+  margin: 50px auto 50px;
+
+  &__title {
+    color: #1E3D76;
+    padding-left: 20px;
   }
+}
+.rashodniki-items {
+  overflow-x: auto;
+  table {
+    width: 100%;
+    border-collapse: collapse;
+  }
+  tbody tr {
+    border: 1px solid #AAA;
+  }
+  th {
+    color: #1E3D76;
+    font-size: 18px;
+    line-height: 50px;
+    font-weight: 400;
+    padding: 0 20px;
+    text-align: left;
+  }
+  th:nth-child(3) {
+    text-align: center;
+  }
+  th:nth-child(2) {
+    max-width: 240px;
+  }
+  td {
+    color: #5A5A5A;
+    font-size: 16px;
+    padding: 8px 20px;
+    min-width: max-content;
+  }
+  td:nth-child(2) {
+    span {
+      display: block;
+      width: 100%;
+      padding: 15.4px 10px;
+      border-radius: 6px;
+      background: #EDEDED;
+    }
+  }
+  td:nth-child(3) {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    text-align: right;
+    gap: 25px;
+
+    p {
+      color: #212529;
+      font-size: 18px;
+      font-weight: 600;
+    }
+    a {
+      display: block;
+      text-align: center;
+      border-radius: 6px;
+      padding: 14.4px 10px;
+      color: #1E3D76;
+      border: 1px solid #1E3D76;
+      width: 245px;
+    }
+  }
+}
